--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.5"
   }
